5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1573_1327.log
== SUBMITION (2019-03-11 15:10:47) 
-- CODE:
print(45)
	 )
-- EXECUTION TIME:
0.232197
-- ERROR:
  File "/home/codebench/codes/1573/1327/main.py", line 2
    )
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:10:49) 
-- CODE:
print(45)
	 )
-- ERROR:
File "XXXX", line 2
    )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:11:00) 
-- CODE:
print(45)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:11:02) 
-- CODE:
print(45)
-- EXECUTION TIME:
0.219439
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:11:04) 
-- CODE:
print(45)
-- EXECUTION TIME:
0.160024
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:11:28) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.272241
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
